--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
